force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplateProblem__c/HealthCloudGA__CarePlanTemplateProblem__c.object-meta.xml
<CustomObject>
    <label>Care Plan Template Problem</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Care Plan Template Problem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Care Plan Template Problems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>