force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplateProblem__c/fields/HealthCloudGA__Category__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cognition</fullName>
            </value>
            <value>
                <fullName>Pain Monitoring or Management</fullName>
            </value>
            <value>
                <fullName>Respiratory Impairment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>